vlib/v/parser/tests/division_by_zero_int_var_err.out
vlib/v/parser/tests/division_by_zero_int_var_err.v:3:12: error: division by zero
    1 | fn main() {
    2 |     a := 0
    3 |     println(1/a)
      |               ^
    4 | }
