vlib/v/parser/tests/division_by_zero_int_var_err.vv
fn main() {
	a := 0
	println(1/a)
}
